[HYBRID] Issue #17 Corrected the password hash and connecting to the containerized database.